# tictactoe-godmode-test4

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
.god-mode/: pr_events.jsonl  pretool_blocks.jsonl
src/tictactoe/: game.py  server.py
src/tictactoe/static/: index.html
tests/: test_game.py  test_server.py
