[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "tictactoe"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
tictactoe-serve = "tictactoe.server:main"

[project.optional-dependencies]
test = ["pytest"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
